--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SECRET="Palabra_Secreta"
-DB_HOST="mongodb+srv://damanosalvag:admin@cluster0.ejzup6c.mongodb.net/db-slimmom?retryWrites=true&w=majority"
+DB_HOST="mongodb+srv://damanosalvag:admin@cluster0.ejzup6c.mongodb.net/db-slimmoms?retryWrites=true&w=majority"
